fix: center align items in JokeContainer for improved layout

--- a/src/style.scss
+++ b/src/style.scss
@@ -147,7 +147,7 @@ body {
   }
   &__JokeContainer {
     display: flex;
-    align-items: start;
+    align-items: center;
     flex-direction: column;
     overflow-x: scroll;
     scrollbar-width: none;
